--- a/Mini_DBMS/Mini_DBMS/Content/Site.css
+++ b/Mini_DBMS/Mini_DBMS/Content/Site.css
@@ -22,3 +22,9 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.custom-footer {
+    position: absolute;
+    bottom: 0;
+    padding-left: 50%;
+}
