--- a/Mini_DBMS/Mini_DBMS/Views/Home/Tables.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/Tables.cshtml
@@ -11,7 +11,7 @@
     @Html.ActionLink("Go back", "GoToDatabases", "Home")
 </div>
 
-<h2>Tables for database @Model.Name</h2>
+<h2>@Model.Name tables</h2>
 
 <table class="table">
     <thead>
@@ -21,7 +21,7 @@
             </td>
         </tr>
     </thead>
-    <tbody>
+    @*<tbody>
         @foreach (var table in Model.Tables)
         {
             <tr>
@@ -32,7 +32,7 @@
                 </td>
             </tr>
         }
-    </tbody>
+    </tbody>*@
 </table>
 
 <div class="pull-right">
