--- a/Mini_DBMS/Mini_DBMS/Views/Home/Fields.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/Fields.cshtml
@@ -35,7 +35,7 @@
         </tr>
     </thead>
 
-    @*<tbody>
+    <tbody>
         @foreach (var field in Model.Fields)
         {
             <tr>
@@ -61,7 +61,7 @@
                 
             </tr>
         }
-        </tbody>*@
+        </tbody>
 </table>
 
 <div class="pull-right">
