--- a/Mini_DBMS/Mini_DBMS/Views/Home/Index.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                     <td>@database.Name</td>
                     <td>@database.Tables.Count</td>
                     <td>
-                        <input type="button" value="Drop" onclick="DropDatabase()"/>
+                        <input type="button" value="Drop" onclick="location.href='@Url.Action("DeleteDatabase", "Home", new { databaseName = database.Name })'"/>
                     </td>
                 </tr>
             }
