--- a/Mini_DBMS/Mini_DBMS/Views/Shared/_Layout.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         @RenderBody()
         <hr />
         <footer class="custom-footer">
-            <p>&copy; @DateTime.Now.Year - MCSI</p>
+            <p>&copy; @DateTime.Now.Year - ISGBD</p>
         </footer>
     </div>
 
