Validations and view field for table

--- a/Mini_DBMS/Mini_DBMS/Views/Home/Fields.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/Fields.cshtml
@@ -12,7 +12,7 @@
     @Html.ActionLink("Go back", "GoToTables", "Home")
 </div>
 
-<h2>Fields for table @Model.Name</h2>
+<h2>Fields for @Model.Name</h2>
 
 <table class="table">
     <thead>
