--- a/Mini_DBMS/Mini_DBMS/Views/Home/Index.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/Index.cshtml
@@ -25,10 +25,10 @@
                 <td>@database.Name</td>
                 <td>@database.Tables.Count</td>
                 <td>
-                    <input type="button" value="Delete" onclick="location.href='@Url.Action("DeleteDatabase", "Home", new { databaseName = database.Name })'" />
+                    <input type="button" value="View tables" onclick="location.href='@Url.Action("ViewDatabase", "Home", new { databaseName = database.Name })'" />
                 </td>
                 <td>
-                    <input type="button" value="View database" onclick="location.href='@Url.Action("ViewDatabase", "Home", new { databaseName = database.Name })'" />
+                    <input type="button" value="Delete" onclick="location.href='@Url.Action("DeleteDatabase", "Home", new { databaseName = database.Name })'" />
                 </td>
             </tr>
             }
