Add foreign key constraint

--- a/Mini_DBMS/Mini_DBMS/Views/Home/Fields.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/Fields.cshtml
@@ -52,7 +52,7 @@
                 @if (@Model.Fields.Count != 0)
                 {
                     <td>
-                        <input type="button" value="Set as foreign key" onclick="AddForeignKey(@field.Name)"/>
+                        <input type="button" value="Set as foreign key" onclick="AddForeignKey('@field.Name')"/>
                     </td>
                 }
             </tr>
