--- a/Mini_DBMS/Mini_DBMS/Views/Home/_AddForeignKey.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/_AddForeignKey.cshtml
@@ -1,4 +1,5 @@
-﻿@model Mini_DBMS.Models.AddForeignKeyModel
+﻿@using System.Web.UI.WebControls
+@model Mini_DBMS.Models.AddForeignKeyModel
 
 @{
     var tableItems = Model.Database.Tables.Select(x => new SelectListItem
@@ -8,13 +9,16 @@
     });
     var tableProperties = new List<SelectListItem>();
 
-    if (!string.IsNullOrEmpty(Model.ReferencedTable))
+    foreach (var table in Model.Database.Tables)
     {
-        tableProperties = Model.Database.Tables.FirstOrDefault(x => x.Name == Model.ReferencedTable).Fields.Select(x => new SelectListItem
+        foreach (var field in table.Fields)
         {
-            Text = x.Name,
-            Value = x.Name
-        }).ToList();
+            tableProperties.Add(new SelectListItem
+            {
+                Value = field.Name,
+                Text = string.Format("{0} ({1})", field.Name, table.Name)
+            });
+        }
     }
 }
 
@@ -33,21 +37,23 @@
 {
 
     <fieldset>
+        @Html.HiddenFor(m=>m.Field)
         <h3>Set @Model.Field as foreign key</h3>
 
         <div class="form-group label-static is-empty">
             <label class="control-label">Table name</label>
-            @Html.DropDownListFor(model => model.ReferencedTable, tableItems, new { @class = "form-control" })
+            @Html.DropDownListFor(model => model.ReferencedTable, tableItems, new {@class = "form-control"})
         </div>
 
         <div class="form-group label-static is-empty">
             <label class="control-label">Field name</label>
-            @Html.DropDownListFor(model => model.ReferencedProperty, tableProperties, new { @class = "form-control" })
+            @Html.DropDownListFor(model => model.ReferencedProperty, tableProperties, new {@class = "form-control"})
         </div>
 
         <div class="page-footer">
             <div class="pull-right">
-                <button type="submit" class="btn btn-primary">Add<div clifs="ripple-container"></div></button>
+                <button type="submit" class="btn btn-primary">Add
+                    <div clifs="ripple-container"></div></button>
             </div>
         </div>
     </fieldset>
