--- a/Mini_DBMS/Mini_DBMS/Views/Home/_AddIndex.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/_AddIndex.cshtml
@@ -38,6 +38,11 @@
         @Html.DropDownListFor(m => m.IndexType, new SelectList(Enum.GetValues(typeof(IndexType))), "Select type", new { @class = "form-control" })
 
     </div>
+    
+    <div class="form-group label-static is-empty">
+        <label class="control-label">Unique</label>
+        @Html.CheckBoxFor(x => x.IndexUnique)
+    </div>
 
     <div class="page-footer">
         <div class="pull-right">
