--- a/Mini_DBMS/Mini_DBMS/Views/Home/_AddForeignKey.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/_AddForeignKey.cshtml
@@ -37,23 +37,25 @@
 {
 
     <fieldset>
-        @Html.HiddenFor(m=>m.Field)
+        @Html.HiddenFor(m => m.Field)
         <h3>Set @Model.Field as foreign key</h3>
 
         <div class="form-group label-static is-empty">
             <label class="control-label">Table name</label>
-            @Html.DropDownListFor(model => model.ReferencedTable, tableItems, new {@class = "form-control"})
+            @Html.DropDownListFor(model => model.ReferencedTable, tableItems, new { @class = "form-control" })
         </div>
 
         <div class="form-group label-static is-empty">
             <label class="control-label">Field name</label>
-            @Html.DropDownListFor(model => model.ReferencedProperty, tableProperties, new {@class = "form-control"})
+            @Html.DropDownListFor(model => model.ReferencedProperty, tableProperties, new { @class = "form-control" })
         </div>
 
         <div class="page-footer">
             <div class="pull-right">
-                <button type="submit" class="btn btn-primary">Add
-                    <div clifs="ripple-container"></div></button>
+                <button type="submit" class="btn btn-primary">
+                    Add
+                    <div clifs="ripple-container"></div>
+                </button>
             </div>
         </div>
     </fieldset>
