--- a/Mini_DBMS/Mini_DBMS/Views/Home/ViewData.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/ViewData.cshtml
@@ -7,14 +7,20 @@
 
 <table class="table">
     <thead>
-        <tr>
-            @foreach (var field in @Model.Fields)
-            {
-                <th>@field.Name</th>
-            }
-        </tr>
+    <tr>
+        @foreach (var field in @Model.Fields)
+        {
+            <th>@field.Name</th>
+        }
+    </tr>
     </thead>
 </table>
+
+@foreach (var field in @Model.Fields)
+{
+    <input type="text"/>
+}
+@*@Html.EditorFor(x => x.f)*@
 
 <input type="button" value="Insert" onclick="location.href='@Url.Action("_AddData", "Home", new {tableName = Model.Name})'" />
 <input type="button" value="Delete" onclick="location.href='@Url.Action("_DeleteData", "Home", new {tableName = Model.Name})'" />
