--- a/Mini_DBMS/Mini_DBMS/Views/Home/ViewData.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/ViewData.cshtml
@@ -5,24 +5,28 @@
 
 @model Mini_DBMS.Models.Table
 
+<script src="~/Scripts/customs/viewData.js"></script>
+
 <table class="table">
     <thead>
-    <tr>
-        @foreach (var field in @Model.Fields)
-        {
-            <th>@field.Name</th>
-        }
-    </tr>
+        <tr>
+            @foreach (var field in @Model.Fields)
+            {
+                <th>@field.Name</th>
+            }
+        </tr>
     </thead>
 </table>
 
 @foreach (var field in @Model.Fields)
 {
-    <input type="text"/>
+    <input class="fieldValue" type="text" />
 }
-@*@Html.EditorFor(x => x.f)*@
+<input type="button" value="Insert" onclick="AddData()" />
 
-<input type="button" value="Insert" onclick="location.href='@Url.Action("_AddData", "Home", new {tableName = Model.Name})'" />
+
+</br>
+</br>
 <input type="button" value="Delete" onclick="location.href='@Url.Action("_DeleteData", "Home", new {tableName = Model.Name})'" />
 
 
