--- a/Mini_DBMS/Mini_DBMS/Views/Home/_AddIndex.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/_AddIndex.cshtml
@@ -28,7 +28,19 @@
     <h3>Add index</h3>
 
     <div class="form-group label-static is-empty">
+        <label class="control-label">Table name</label>
+        @Html.TextBoxFor(model => model.Name, new { @class = "form-control", @type = "hidden"})
+
+    </div>
+
+    <div class="form-group label-static is-empty">
         <label class="control-label">Index name</label>
+        @Html.TextBoxFor(model => model.FileName, new { Value = "" })
+
+    </div>
+
+    <div class="form-group label-static is-empty">
+        <label class="control-label">Index field</label>
         @Html.DropDownListFor(model => model.Index, fieldsItems, new { @class = "form-control" })
 
     </div>
@@ -38,7 +50,7 @@
         @Html.DropDownListFor(m => m.IndexType, new SelectList(Enum.GetValues(typeof(IndexType))), "Select type", new { @class = "form-control" })
 
     </div>
-    
+
     <div class="form-group label-static is-empty">
         <label class="control-label">Unique</label>
         @Html.CheckBoxFor(x => x.IndexUnique)
