--- a/Mini_DBMS/Mini_DBMS/Views/Home/ViewData.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/ViewData.cshtml
@@ -44,5 +44,5 @@
 </br>
 <input type="button" value="Delete" onclick="location.href='@Url.Action("_DeleteData", "Home", new {tableName = Model.Name})'" />
 
-<input type="button" value="Conditional search" onclick="location.href='@Url.Action("ConditionalSearchPage", "Home")" />
+<input type="button" value="Conditional search" onclick="location.href='@Url.Action("ConditionalSearchPage", "Home")'" />
 
