--- a/Mini_DBMS/Mini_DBMS/Views/Shared/_Layout.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer class="custom-footer">
+        @*<footer class="custom-footer">
             <p>&copy; @DateTime.Now.Year - ISGBD</p>
-        </footer>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
