--- a/Mini_DBMS/Mini_DBMS/Views/Home/ConditionalSearch.cshtml
+++ b/Mini_DBMS/Mini_DBMS/Views/Home/ConditionalSearch.cshtml
@@ -56,7 +56,7 @@
             
         <div class="page-footer">
             <div class="pull-right">
-                <button type="submit" class="btn btn-primary">Create<div clifs="ripple-container"></div></button>
+                <button type="submit" class="btn btn-primary">Search<div clifs="ripple-container"></div></button>
             </div>
         </div>
     </fieldset>
